...
    >
      <Tab.Screen
        name="Chats"
        component={RoomListScreen}
        options={{
          title: 'Chats',
          tabBarButtonTestID: 'tab-chats',
          tabBarIcon: () => <TabIcon icon="💬" />,
        }}
      />
      <Tab.Screen
        name="Contacts"
        component={ContactsScreen}
...
